[gd_scene load_steps=7 format=3 uid="uid://cnl7g54ey5fkk"]

[ext_resource type="Script" path="res://objects/ball.gd" id="1_814d4"]
[ext_resource type="Texture2D" uid="uid://bxrnu11wxt15e" path="res://assets/BasicArkanoidPack.png" id="1_qunbd"]
[ext_resource type="AudioStream" uid="uid://c1fvpgxkciv1e" path="res://assets/sounds/ball_bounce_wall.wav" id="3_lel2t"]
[ext_resource type="AudioStream" uid="uid://de66rbw381kg2" path="res://assets/sounds/ball_bounce_bar.wav" id="4_3n7ok"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pykc5"]
atlas = ExtResource("1_qunbd")
region = Rect2(0, 80, 24, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_iqcey"]
radius = 12.0

[node name="Ball" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_814d4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_pykc5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iqcey")

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayerWall" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_lel2t")

[node name="AudioStreamPlayerBar" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_lel2t")

[node name="AudioStreamPlayerBrick" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_3n7ok")
